--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-oauth2": "^1.6.1"
+    "passport-oauth2": "^1.6.1",
+    "path": "^0.12.7"
   }
 }
